# AOC-2015

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json
c/: .gitignore  CMakeLists.txt  config.h.cin
c/advent/: advent.c  combinatorics.c  permute.c  set.c  string.c
c/advent/inc/: advent.h
c/advent/inc/advent/: combinatorics.h  map.h  permute.h  set.h  string.h  vector.h
c/day01/: main.c
c/day02/: main.c
c/day03/: main.c
c/day04/: main.c
c/day05/: main.c
c/day06/: main.c
c/day07/: main.c
c/day08/: main.c
c/day09/: main.c
c/day10/: main.c
c/day11/: main.c
c/day12/: main.c
c/day13/: main.c
c/day14/: main.c
c/day15/: main.c
c/day16/: main.c
c/day17/: main.c
c/day18/: main.c
cpp/: .gitignore  CMakeLists.txt  config.hpp.cin  cpp.hint
cpp/advent/: advent.cpp
cpp/advent/inc/: advent.hpp
cpp/day01/: main.cpp
cpp/day02/: main.cpp
cpp/day03/: main.cpp
cpp/day04/: main.cpp
cpp/day05/: main.cpp
cpp/day06/: main.cpp
cpp/day07/: main.cpp
cpp/day08/: main.cpp
cs/: .gitignore  cs.sln
cs/Day01/: Program.cs
cs/Day02/: Day02.csproj  Program.cs
cs/Day03/: Mover.cs  Program.cs  WhichMover.cs
cs/Day04/: Program.cs
cs/Helper/: EnumerableUtils.cs
cwn/: .cmake-format.json  CMakeLists.txt  config.hwn.cin
cwn/2015/: CMakeLists.txt
cwn/2015/day01/src/: main.cwn
cwn/2015/day02/src/: main.cwn
cwn/2015/day03/src/: main.cwn
cwn/2015/day04/src/: main.cwn
cwn/2015/day05/src/: main.cwn
cwn/2015/day06/src/: main.cwn
cwn/advent/inc/: advent.hwn
cwn/advent/inc/advent/: set.hwn  vector.hwn  view.hwn
cwn/advent/inc/advent/internal/: array.hwn  constutils.hwn  hash.hwn  typetraits.hwn
cwn/advent/src/: advent.cwn  hash.cwn  set.cwn
cwn/day01/src/: main.cwn
cwn/day02/src/: main.cwn
cwn/day03/src/: main.cwn
cwn/day04/src/: main.cwn
cwn/day05/src/: main.cwn
cwn/day06/src/: main.cwn
day02/src/: main.rs
day03/src/: main.rs
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/src/: main.rs
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/: Cargo.toml
day09/src/: main.rs
day11/src/: main.rs
day12/src/: main.rs
hs/: Aoc2015.cabal
hs/src/: Advent.hs  Dec01.hs
hs/test/: Main.hs
py/day01/: __main__.py
py/day02/: __main__.py
rs/day01/src/: main.rs
rs/day04/: Cargo.toml
rs/day05/: Cargo.toml
rs/day06/: Cargo.toml
rs/day07/: Cargo.toml
rs/day07/src/: main.rs
rs/day09/src/: main.rs
rs/day10/src/: main.rs
rs/day11/: Cargo.toml
rs/day11/src/: main.rs
rs/day13/: Cargo.toml
ts/: .gitignore  .prettierrc.json  package.json  tsconfig.json
ts/src/day01/: index.ts
ts/src/day02/: index.ts
ts/src/day03/: index.ts
