cabal-version:      2.4
name:               Aoc2015
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Kyle Coffey
maintainer:         me@phytolizer.dev

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Advent
                    , Dec01

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite Aoc2015-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
                    , HUnit
                    , Aoc2015
